--- a/book.toml
+++ b/book.toml
@@ -3,4 +3,4 @@ authors = ["Hydrogenbear"]
 language = "en"
 multilingual = false
 src = "src"
-title = "Things can be changed"
+title = "Hydrogenbear's Notebook"
